ui changes done

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <div id="middiv">
       <p>Your Current Count is : <span id="counter">0</span></p>
     </div>
+
+    <div id="btn">
     <button type="button" onclick="Decrement()">Decrement</button>
     <button type="button" onclick="Increment()">Increment</button>
     <button id ="clear" type="button" onclick="Clear()">Clear</button>
-
+  </div>
     <script src="script.js"></script>
   </body>
 </html>
